Unified buildout, activate amqp by default

--- a/base.cfg
+++ b/base.cfg
@@ -19,9 +19,9 @@ parts =
     instance7
     instance8
     instance-debug
+    instance-amqp
     instance-async
 
-# If you want to get the last versions of eggs, you have to comment the line "versions-prod.cfg"
 extends =
     https://dist.plone.org/release/4.3.18/versions.cfg
     port.cfg
@@ -77,6 +77,31 @@ additional =
   %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
   %include ${buildout:directory}/zope_add_zeo.conf
   %include ${buildout:directory}/zope_add_async.conf
+amqp =
+  %import collective.zamqp
+  <amqp-broker-connection>
+      connection_id   dms.connection
+      hostname        ${rabbitmq:hostname}
+      port            ${rabbitmq:port}
+      username        ${rabbitmq:username}
+      password        ${rabbitmq:password}
+      virtual_host    /webservice
+      heartbeat       120
+      keepalive       60
+  </amqp-broker-connection>
+  <amqp-consuming-server>
+      connection_id   dms.connection
+      site_id         ${webservicejson:site_id}
+      user_id         admin
+  </amqp-consuming-server>
+zamqp=
+  <product-config imio.zamqp.core>
+      client_id       ${webservicejson:client_id}
+      routing_key     ${webservicejson:client_id}
+      ws_url          ${webservicejson:url}
+      ws_login        ${webservicejson:login}
+      ws_password     ${webservicejson:password}
+  </product-config>
 
 [instance1]
 #effective-user =
@@ -103,6 +128,7 @@ zope-conf-additional =
       user admin
       password ${port:admin-password}
   </clock-server>
+  ${zope-conf:zamqp}
 
 zcml-additional =
     <include package="plone.app.async" file="multi_db_instance.zcml" />
@@ -135,16 +161,13 @@ eggs =
     collective.monitor
     Products.DocFinderTab
     Products.PloneMeeting
+    Products.PloneMeeting[amqp]
     five.z2monitor
     Products.ZNagios
     zc.z3monitor
     collective.upgrade
 
-# If you want to register ZCML slugs for any packages, list them here.
-# e.g. zcml = my.package my.other.package
 zcml =
-# call imio.pm.locales in the pluginprofile.cfg calling base.cfg to override translations!
-#    imio.pm.locales
     Products.PloneMeeting-overrides
     five.z2monitor
     Products.ZNagios-zcmonitor
@@ -248,15 +271,39 @@ zope-conf-additional =
   </product-config>
   ${zope-conf:additional}
 
+[instance-amqp]
+<= instance1
+zserver-threads = 1
+
+http-address = ${port:instance-amqp-http}
+zope-conf-additional =
+  <product-config five.z2monitor>
+     bind 0.0.0.0:${port:instance-amqp-monitor}
+  </product-config>
+  %define FILESTORAGE ${buildout:directory}/var/filestorage
+  %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
+  %define ZEOADDRESS ${zeoserver:zeo-address}
+  %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
+  %include ${buildout:directory}/zope_add_zeo.conf
+  ${zope-conf:amqp}
+  ${zope-conf:zamqp}
+
+[rabbitmq]
+hostname = 127.0.0.1
+port = 5672
+username = guest
+password = guest
+
+[webservicejson]
+url = http://localhost:6543
+login = testuser
+password = test
+client_id = 019999
+site_id = Plone
 
 [omelette]
 recipe = collective.recipe.omelette
 eggs = ${instance1:eggs}
-
-# amqp/zamqp is empty by default. If amqp.cfg is included, it's overrided
-[zope-conf]
-amqp =
-zamqp =
 
 [debug]
 eggs =
@@ -269,4 +316,3 @@ zcml =
 recipe = zc.recipe.egg
 eggs = ZODB3
 scripts = repozo
-
