--- a/communes-dev.cfg
+++ b/communes-dev.cfg
@@ -8,4 +8,4 @@ auto-checkout +=
     Products.MeetingCommunes
 
 [sources]
-Products.MeetingCommunes = git git@github.com:IMIO/Products.MeetingCommunes.git
+Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git
