--- a/dev.cfg
+++ b/dev.cfg
@@ -11,9 +11,42 @@ parts +=
     code-analysis
 
 auto-checkout =
-    Products.PloneMeeting
+#    appy
+    imio.actionspanel
+    imio.annex
+    imio.dashboard
+    imio.helpers
+    imio.history
+    imio.migrator
+    imio.prettylink
+    collective.behavior.talcondition
+#    collective.ckeditor
+    collective.compoundcriterion
+    collective.contact.core
+    collective.contact.plonegroup
+    collective.documentgenerator
+    collective.dms.scanbehavior
+    collective.eeafaceted.batchactions
+    collective.eeafaceted.collectionwidget
+    collective.eeafaceted.dashboard
+    collective.eeafaceted.z3ctable
+#    collective.fontawesome
+    collective.iconifiedcategory
+#    collective.messagesviewlet
+    collective.js.fancytree
+    collective.js.iframeresizer
+    collective.js.tooltipster
+    collective.querynextprev
+#    collective.fingerpointing
+#    collective.upgrade
+    collective.z3cform.select2
+#    communesplone.layout
     imio.pm.locales
+    imio.zamqp.core
+    imio.zamqp.pm
     plonetheme.imioapps
+#    Products.CPUtils
+    Products.PloneMeeting
 
 # do mr.developer not fail with invalid subversion https certificates
 always-accept-server-certificate = true
