--- a/sources.cfg
+++ b/sources.cfg
@@ -1,19 +1,50 @@
 [remotes]
-plone = git://github.com/plone
-plone_push = git@github.com:plone
 collective = git://github.com/collective
 collective_push = git@github.com:collective
-imio = https://github.com/IMIO
+plone = git://github.com/plone
+plone_push = git@github.com:plone
+imio = git://github.com/IMIO
 imio_push = git@github.com:IMIO
 zopefoundation = git://github.com/zopefoundation
 zopefoundation_push = git@github.com:zopefoundation
 zopesvn = svn://svn.zope.org/repos/main/
 
 [sources]
-communesplone.layout = git ${remotes:imio}/communesplone.layout.git pushurl=${remotes:imio_push}/communesplone.layout.git
-Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git
-plonetheme.imioapps = git ${remotes:imio}/plonetheme.imioapps.git pushurl=${remotes:imio_push}/plonetheme.imioapps.git
+appy = svn https://svn.forge.pallavi.be/appy-dev/dev0
+collective.behavior.talcondition = git ${remotes:collective}/collective.behavior.talcondition.git pushurl=${remotes:collective_push}/collective.behavior.talcondition.git
+collective.ckeditor = git ${remotes:collective}/collective.ckeditor.git pushurl=${remotes:collective_push}/collective.ckeditor.git
+collective.compoundcriterion = git ${remotes:collective}/collective.compoundcriterion.git pushurl=${remotes:collective_push}/collective.compoundcriterion.git
+collective.contact.core = git ${remotes:collective}/collective.contact.core.git pushurl=${remotes:collective_push}/collective.contact.core.git
+collective.contact.plonegroup = git ${remotes:collective}/collective.contact.plonegroup.git pushurl=${remotes:collective_push}/collective.contact.plonegroup.git
+collective.dms.scanbehavior = git ${remotes:collective}/collective.dms.scanbehavior.git pushurl=${remotes:collective_push}/collective.dms.scanbehavior.git
+collective.documentgenerator = git ${remotes:collective}/collective.documentgenerator.git pushurl=${remotes:collective_push}/collective.documentgenerator.git
+collective.eeafaceted.batchactions = git ${remotes:imio}/collective.eeafaceted.batchactions.git pushurl=${remotes:imio_push}/collective.eeafaceted.batchactions.git
+collective.eeafaceted.collectionwidget = git ${remotes:collective}/collective.eeafaceted.collectionwidget.git pushurl=${remotes:collective_push}/collective.eeafaceted.collectionwidget.git
+collective.eeafaceted.dashboard = git ${remotes:collective}/collective.eeafaceted.dashboard.git pushurl=${remotes:collective_push}/collective.eeafaceted.dashboard.git
+collective.eeafaceted.z3ctable = git ${remotes:collective}/collective.eeafaceted.z3ctable.git pushurl=${remotes:collective_push}/collective.eeafaceted.z3ctable.git
+collective.fingerpointing = git ${remotes:collective}/collective.fingerpointing.git pushurl=${remotes:collective_push}/collective.fingerpointing.git
+collective.fontawesome = git ${remotes:collective}/collective.fontawesome.git pushurl=${remotes:collective_push}/collective.fontawesome.git
+collective.iconifiedcategory = git ${remotes:collective}/collective.iconifiedcategory.git pushurl=${remotes:collective_push}/collective.iconifiedcategory.git
+collective.js.fancytree = git ${remotes:collective}/collective.js.fancytree.git pushurl=${remotes:collective_push}/collective.js.fancytree.git
+collective.js.iframeresizer = git ${remotes:collective}/collective.js.iframeresizer.git pushurl=${remotes:collective_push}/collective.js.iframeresizer.git
+collective.js.tooltipster = git ${remotes:collective}/collective.js.tooltipster.git pushurl=${remotes:collective_push}/collective.js.tooltipster.git
+collective.messagesviewlet = git ${remotes:collective}/collective.messagesviewlet.git pushurl=${remotes:collective_push}/collective.messagesviewlet.git
+collective.querynextprev = git ${remotes:collective}/collective.querynextprev.git pushurl=${remotes:collective_push}/collective.querynextprev.git
+collective.upgrade = git ${remotes:collective}/collective.upgrade.git pushurl=${remotes:collective_push}/collective.upgrade.git
+collective.z3cform.select2 = git ${remotes:collective}/collective.z3cform.select2.git pushurl=${remotes:collective_push}/collective.z3cform.select2.git
 
+communesplone.layout = git ${remotes:imio}/communesplone.layout.git pushurl=${remotes:imio_push}/communesplone.layout.git
+imio.actionspanel = git ${remotes:imio}/imio.actionspanel.git pushurl=${remotes:imio_push}/imio.actionspanel.git
+imio.annex = git ${remotes:imio}/imio.annex.git pushurl=${remotes:imio_push}/imio.annex.git
+imio.dashboard = git ${remotes:imio}/imio.dashboard.git pushurl=${remotes:imio_push}/imio.dashboard.git
+imio.helpers = git ${remotes:imio}/imio.helpers.git pushurl=${remotes:imio_push}/imio.helpers.git
+imio.history = git ${remotes:imio}/imio.history.git pushurl=${remotes:imio_push}/imio.history.git
+imio.migrator = git ${remotes:imio}/imio.migrator.git pushurl=${remotes:imio_push}/imio.migrator.git
 imio.pm.locales = git ${remotes:imio}/imio.pm.locales.git pushurl=${remotes:imio_push}/imio.pm.locales.git
+imio.prettylink = git ${remotes:imio}/imio.prettylink.git pushurl=${remotes:imio_push}/imio.prettylink.git
 imio.zamqp.core = git ${remotes:imio}/imio.zamqp.core.git pushurl=${remotes:imio_push}/imio.zamqp.core.git
 imio.zamqp.pm = git ${remotes:imio}/imio.zamqp.pm.git pushurl=${remotes:imio_push}/imio.zamqp.pm.git
+
+Products.CPUtils = git ${remotes:imio}/Products.CPUtils.git pushurl=${remotes:imio_push}/Products.CPUtils.git
+Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git
+plonetheme.imioapps = git ${remotes:imio}/plonetheme.imioapps.git pushurl=${remotes:imio_push}/plonetheme.imioapps.git
