--- a/versions.cfg
+++ b/versions.cfg
@@ -232,3 +232,19 @@ psutil = 3.1.1
 threadframe = 0.2
 Products.ZServerViews = 0.2.0
 gocept.munin = 0.1
+
+# AMQP
+requests = 2.18.4
+imio.dataexchange.core = 0.2
+collective.zamqp = 0.16.1
+imio.zamqp.core = 0.4
+imio.zamqp.pm = 0.6
+reportlab = 3.4.0
+PyPDF2 = 1.26.0
+pip = 9.0.1
+
+# Required by collective.zamqp 0.16.0
+certifi = 2017.11.5
+urllib3 = 1.22
+idna = 2.6
+chardet = 3.0.4
