Just enable communes.cfg by default

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,7 +3,7 @@
 extends =
 #    solr.cfg
 #    ldap.cfg
-#    communes.cfg
-    communes-dev.cfg
+    communes.cfg
+#    communes-dev.cfg
 #    bep.cfg
 #    bep-dev.cfg
