Configured prod.cfg

--- a/base.cfg
+++ b/base.cfg
@@ -11,34 +11,23 @@ parts =
     facts
     zeoserver
     instance1
-    instance2
-    instance3
-    instance4
-    instance5
-    instance6
-    instance7
-    instance8
-    instance-debug
     instance-amqp
     instance-async
+    upgrade
 
 extends =
     https://dist.plone.org/release/4.3.18/versions.cfg
     port.cfg
-    versions.cfg
     sources.cfg
+    versions.cfg
 
 versions=versions
 
-# Add additional egg download sources here. dist.plone.org contains archives
-# of Plone packages.
 find-links =
     http://twistedmatrix.com/Releases/Twisted/8.2/Twisted-8.2.0.tar.bz2
 
 always-checkout = force
 
-# Add additional eggs here
-# elementtree is required by Plone
 eggs =
     Plone
     Pillow
@@ -49,8 +38,7 @@ eggs =
 #    Products.Zope_Hotfix_20110622  # <= 3.3.5 , <= 4.0.7, <= 4.1rc3
 #    Products.PloneHotfix20130618  # <= 4.2.5 , <= 4.3.1
 #    Products.PloneHotfix20131210i # <= 4.3.3
-# Reference any eggs you are developing here, one per line
-# e.g.: develop = src/my.package
+
 develop =
 
 [facts]
@@ -165,7 +153,6 @@ eggs =
     five.z2monitor
     Products.ZNagios
     zc.z3monitor
-    collective.upgrade
 
 zcml =
     Products.PloneMeeting-overrides
@@ -173,86 +160,6 @@ zcml =
     Products.ZNagios-zcmonitor
     zc.z3monitor
     collective.monitor
-
-[instance2]
-<= instance1
-http-address = ${port:instance2-http}
-zope-conf-additional =
-  <product-config five.z2monitor>
-     bind 0.0.0.0:${port:instance2-monitor}
-  </product-config>
-  ${zope-conf:additional}
-
-[instance3]
-<= instance1
-http-address = ${port:instance3-http}
-zope-conf-additional =
-  <product-config five.z2monitor>
-     bind 0.0.0.0:${port:instance3-monitor}
-  </product-config>
-  ${zope-conf:additional}
-
-[instance4]
-<= instance1
-http-address = ${port:instance4-http}
-zope-conf-additional =
-  <product-config five.z2monitor>
-     bind 0.0.0.0:${port:instance4-monitor}
-  </product-config>
-  ${zope-conf:additional}
-
-[instance5]
-<= instance1
-http-address = ${port:instance5-http}
-zope-conf-additional =
-  <product-config five.z2monitor>
-     bind 0.0.0.0:${port:instance5-monitor}
-  </product-config>
-  ${zope-conf:additional}
-
-[instance6]
-<= instance1
-http-address = ${port:instance6-http}
-zope-conf-additional =
-  <product-config five.z2monitor>
-     bind 0.0.0.0:${port:instance6-monitor}
-  </product-config>
-  ${zope-conf:additional}
-
-[instance7]
-<= instance1
-http-address = ${port:instance7-http}
-zope-conf-additional =
-  <product-config five.z2monitor>
-     bind 0.0.0.0:${port:instance7-monitor}
-  </product-config>
-  ${zope-conf:additional}
-
-[instance8]
-<= instance1
-http-address = ${port:instance8-http}
-zope-conf-additional =
-  <product-config five.z2monitor>
-     bind 0.0.0.0:${port:instance8-monitor}
-  </product-config>
-  ${zope-conf:additional}
-
-[instance-debug]
-<= instance1
-http-address = ${port:instance-debug-http}
-debug-mode = on
-verbose-security = on
-zope-conf-additional =
-  <product-config five.z2monitor>
-     bind 0.0.0.0:${port:instance-debug-monitor}
-  </product-config>
-  ${zope-conf:additional}
-eggs =
-    ${instance1:eggs}
-    ${debug:eggs}
-zcml =
-    ${instance1:zcml}
-    ${debug:zcml}
 
 [instance-async]
 <= instance1
@@ -316,3 +223,13 @@ zcml =
 recipe = zc.recipe.egg
 eggs = ZODB3
 scripts = repozo
+
+[upgrade]
+recipe = zc.recipe.egg
+eggs =
+    ${instance1:eggs}
+    ${debug:eggs}
+scripts = upgrade-portals
+arguments = args=[
+    '--zope-conf', '${buildout:directory}/parts/instance1/etc/zope.conf',
+    '--log-file', '${buildout:directory}/var/log/upgrade.log']
