--- a/communes-dev.cfg
+++ b/communes-dev.cfg
@@ -2,9 +2,15 @@
 
 extends =
     dev.cfg
-    communes.cfg
 
 auto-checkout +=
+    Products.MeetingCommunes
+
+[instance1]
+eggs +=
+    Products.MeetingCommunes
+
+zcml +=
     Products.MeetingCommunes
 
 [sources]
