--- a/communes.cfg
+++ b/communes.cfg
@@ -1,38 +1,16 @@
 [buildout]
 
+extends =
+    prod.cfg
+
 parts +=
-    upgrade
 
 [instance1]
 eggs +=
     Products.MeetingCommunes
 
-# load specific PloneMeeting profile ZCML before all ZCMLs so translations are correctly overriden
 zcml +=
     Products.MeetingCommunes
-    imio.pm.locales
-
-[standard]
-recipe = collective.recipe.plonesite
-site-id = standard
-instance = instance1
-default-language = fr
-profiles-initial = Products.CMFPlone:plone-content
-site-replace = false
-post-extras = standard-config.py
-
-[upgrade]
-recipe = zc.recipe.egg
-eggs =
-    ${instance1:eggs}
-    ${debug:eggs}
-zcml =
-    ${instance1:zcml}
-    ${debug:zcml}
-scripts = upgrade-portals
-arguments = args=[
-    '--zope-conf', '${instance1:location}/etc/zope.conf',
-    '--log-file', '${buildout:directory}/var/log/upgrade.log']
 
 [versions]
-Products.MeetingCommunes = 4.1
+Products.MeetingCommunes = 4.1b2
