--- a/versions.cfg
+++ b/versions.cfg
@@ -4,6 +4,8 @@ setuptools = 38.2.4
 Products.DocFinderTab = 1.0.5
 mr.developer = 1.38
 
+Products.PloneMeeting = 4.1b15
+
 # Required by:
 # Products.PloneMeeting
 appy = 0.9.13
