Added testmc section

--- a/communes-dev.cfg
+++ b/communes-dev.cfg
@@ -6,6 +6,9 @@ extends =
 auto-checkout +=
     Products.MeetingCommunes
 
+parts +=
+    testmc
+
 [instance1]
 eggs +=
     Products.MeetingCommunes
@@ -15,3 +18,10 @@ zcml +=
 
 [sources]
 Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git
+
+[testmc]
+recipe = zc.recipe.testrunner
+defaults = ['--auto-color', '--auto-progress', '-s', 'Products.MeetingCommunes']
+eggs =
+    Products.MeetingCommunes [test]
+environment = testenv
