--- a/dev.cfg
+++ b/dev.cfg
@@ -32,7 +32,7 @@ auto-checkout =
     collective.eeafaceted.z3ctable
 #    collective.fontawesome
     collective.iconifiedcategory
-#    collective.messagesviewlet
+    collective.messagesviewlet
     collective.js.fancytree
     collective.js.iframeresizer
     collective.js.tooltipster
