Completed dev profile for MeetingBEP

--- a/bep-dev.cfg
+++ b/bep-dev.cfg
@@ -7,5 +7,15 @@ extends =
 auto-checkout +=
     Products.MeetingBEP
 
+parts +=
+    testbep
+
 [sources]
 Products.MeetingBEP = git git@github.com:IMIO/Products.MeetingBEP.git
+
+[testbep]
+recipe = zc.recipe.testrunner
+defaults = ['--auto-color', '--auto-progress', '-s', 'Products.MeetingBEP']
+eggs =
+    Products.MeetingBEP [test]
+environment = testenv
