--- a/bep.cfg
+++ b/bep.cfg
@@ -7,5 +7,9 @@ extends +=
 eggs +=
     Products.MeetingBEP
 
+zcml +=
+    Products.MeetingBEP
+    Products.MeetingCommunes
+
 [versions]
 Products.MeetingBEP = 4.1
