- Use ftw.labels sources - Add env var FTW_LABELS_PERSONAL_LABELS sample - ipdb/plone.app.testing are now defined in Products.PloneMeeting[test] requires

--- a/base.cfg
+++ b/base.cfg
@@ -142,6 +142,7 @@ environment-vars =
   OO_PORT ${port:oo-port}
   PYTHON_UNO ${port:python-uno}
   PUBLIC_URL ${port:public-url}
+#  FTW_LABELS_PERSONAL_LABELS ['lu']
 
 eggs =
     ${buildout:eggs}
