--- a/dev.cfg
+++ b/dev.cfg
@@ -41,6 +41,7 @@ auto-checkout =
 #    collective.upgrade
     collective.z3cform.select2
 #    communesplone.layout
+    ftw.labels
     imio.pm.locales
     imio.zamqp.core
     imio.zamqp.pm
@@ -78,8 +79,6 @@ defaults = ['--auto-color', '--auto-progress']
 #extra-paths = ${buildout:directory}/parts/omelette
 #include-site-packages = true
 eggs =
-    ipdb
-    plone.app.testing
     Products.PloneMeeting [test]
 
 environment = testenv
