--- a/sources.cfg
+++ b/sources.cfg
@@ -3,6 +3,8 @@ collective = git://github.com/collective
 collective_push = git@github.com:collective
 plone = git://github.com/plone
 plone_push = git@github.com:plone
+ftw = git://github.com/4teamwork
+ftw_push = git@github.com:4teamwork
 imio = git://github.com/IMIO
 imio_push = git@github.com:IMIO
 zopefoundation = git://github.com/zopefoundation
@@ -34,6 +36,7 @@ collective.upgrade = git ${remotes:collective}/collective.upgrade.git pushurl=${
 collective.z3cform.select2 = git ${remotes:collective}/collective.z3cform.select2.git pushurl=${remotes:collective_push}/collective.z3cform.select2.git
 
 communesplone.layout = git ${remotes:imio}/communesplone.layout.git pushurl=${remotes:imio_push}/communesplone.layout.git
+ftw.labels = git ${remotes:ftw}/ftw.labels.git pushurl=${remotes:ftw_push}/ftw.labels.git
 imio.actionspanel = git ${remotes:imio}/imio.actionspanel.git pushurl=${remotes:imio_push}/imio.actionspanel.git
 imio.annex = git ${remotes:imio}/imio.annex.git pushurl=${remotes:imio_push}/imio.annex.git
 imio.dashboard = git ${remotes:imio}/imio.dashboard.git pushurl=${remotes:imio_push}/imio.dashboard.git
