Do not use code-analysis for now

--- a/dev.cfg
+++ b/dev.cfg
@@ -8,10 +8,10 @@ parts +=
     coverage
     report
     robot
-    code-analysis
+#    code-analysis
 
 auto-checkout =
-#    appy
+    appy
     imio.actionspanel
     imio.annex
     imio.dashboard
@@ -115,6 +115,8 @@ initialization =
 
 [code-analysis]
 recipe = plone.recipe.codeanalysis
+return-status-codes = False
+pre-commit-hook = True
 directory =
         ${buildout:directory}/src/Products.PloneMeeting/src
 flake8-ignore = E123,E124,E501,E126,E127,E128,W391,C901
