--- a/versions-dev.cfg
+++ b/versions-dev.cfg
@@ -19,13 +19,11 @@ robotframework-selenium2screenshots = 0.7.2
 robotsuite = 2.0.0
 selenium = 3.3.0
 
+plone.recipe.codeanalysis = 3.0.1
+check-manifest = 0.37
+configparser = 3.7.3
+enum34 = 1.1.6
+mccabe = 0.6.1
+pyflakes = 1.5.0
+
 collective.profiler = 0.3
-
-# code-analysis
-plone.recipe.codeanalysis = 2.2
-flake8 = 2.5.4
-check-manifest = 0.31
-mccabe = 0.4.0
-pyflakes = 1.0.0
-
-ftw.labels = 1.3.1
