--- a/jenkins.cfg
+++ b/jenkins.cfg
@@ -2,6 +2,7 @@
 extends =
     communes-dev.cfg
     https://raw.githubusercontent.com/IMIO/buildout.jenkins/master/jenkins.cfg
+    versions-jenkins.cfg
 
 source-directory = ${buildout:directory}/src
 
@@ -11,18 +12,4 @@ flake8-max-line-length = 119
 
 [zopepy]
 eggs = ${instance1:eggs}
-
-[versions]
-hexagonit.recipe.download = 1.7.1
-plone.recipe.codeanalysis = 3.0.1
-check-manifest = 0.37
-configparser = 3.7.3
-enum34 = 1.1.6
-mccabe = 0.6.1
-flake8 = 3.7.7
-typing = 3.6.6
-pyflakes = 2.1.1
-pycodestyle = 2.5.0
-functools32 = 3.2.3.post2
-entrypoints = 0.3
 
