--- a/bep-dev.cfg
+++ b/bep-dev.cfg
@@ -11,7 +11,7 @@ parts +=
     testbep
 
 [sources]
-Products.MeetingBEP = git git@github.com:IMIO/Products.MeetingBEP.git branch=master
+Products.MeetingBEP = git ${remotes:imio}/Products.MeetingBEP.git pushurl=${remotes:imio_push}/Products.MeetingBEP.git branch=master
 
 [testbep]
 recipe = zc.recipe.testrunner
