--- a/liege-dev.cfg
+++ b/liege-dev.cfg
@@ -11,7 +11,7 @@ parts +=
     testliege
 
 [sources]
-Products.MeetingLiege = git git@github.com:IMIO/Products.MeetingLiege.git branch=master
+Products.MeetingLiege = git ${remotes:imio}/Products.MeetingLiege.git pushurl=${remotes:imio_push}/Products.MeetingLiege.git branch=master
 
 [testliege]
 recipe = zc.recipe.testrunner
