Use zeoserver in standard config

--- a/standard-config.cfg
+++ b/standard-config.cfg
@@ -20,3 +20,4 @@ default-language = fr
 profiles-initial = Products.CMFPlone:plone-content
 site-replace = false
 post-extras = standard-config.py
+zeoserver = zeoserver
