Adding for all profile, the config files

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,5 +7,23 @@ extends =
 #    communes-dev.cfg
 #    bep.cfg
 #    bep-dev.cfg
+#    charleroi.cfg
+#    charleroi-dev.cfg
+#    hainaut-prov.cfg
+#    hainaut-prov-dev.cfg
+#    idea.cfg
+#    idea-dev.cfg
+#    lalouviere.cfg
+#    lalouviere-dev.cfg
+#    lalouviere-cpas.cfg
+#    lalouviere-cpas-dev.cfg
 #    liege.cfg
 #    liege-dev.cfg
+#    liege-cpas.cfg
+#    liege-cpas-dev.cfg
+#    mons.cfg
+#    mons-dev.cfg
+#    namur.cfg
+#    namur-dev.cfg
+#    seraing.cfg
+#    seraing-dev.cfg
