Re-enable code-analysis and pin versions

--- a/versions-dev.cfg
+++ b/versions-dev.cfg
@@ -8,6 +8,18 @@ profilehooks = 1.8.1
 Babel = 2.1.1
 babel = 2.1.1
 coverage = 4.0.3
+#
+plone.recipe.codeanalysis = 3.0.1
+flake8 = 3.7.7
+check-manifest = 0.37
+typing = 3.6.6
+pyflakes = 2.1.1
+pycodestyle = 2.5.0
+mccabe = 0.6.1
+functools32 = 3.2.3.post2
+enum34 = 1.1.6
+entrypoints = 0.3
+configparser = 3.7.4
 
 # robot, these versions works with Chrome 
 Pygments = 2.0.2
