--- a/amqp.cfg
+++ b/amqp.cfg
@@ -1,40 +1,43 @@
 [buildout]
 extends =
-    versions-amqp.cfg
 
-parts +=
-    instance-amqp
-
-[omelette]
-eggs += ${instance-amqp:eggs}
-
-[instance1]
-eggs +=
-    imio.zamqp.pm
-zcml +=
-    imio.zamqp.pm
-
-[instance-amqp]
-<= instance1
-zserver-threads = 1
-eggs +=
-    ${instance1:eggs}
-    imio.zamqp.pm
-
-zcml =
-    ${instance1:zcml}
-    imio.zamqp.pm
-    imio.zamqp.pm-overrides
-
-http-address = ${port:instance-amqp-http}
-zope-conf-additional = 
-  <product-config five.z2monitor>
-     bind 0.0.0.0:${port:instance-amqp-monitor}
+[zope-conf]
+amqp =
+  %import collective.zamqp
+  <amqp-broker-connection>
+      connection_id   dms.connection
+      hostname        ${rabbitmq:hostname}
+      port            ${rabbitmq:port}
+      username        ${rabbitmq:username}
+      password        ${rabbitmq:password}
+      virtual_host    /webservice
+      heartbeat       120
+      keepalive       60
+  </amqp-broker-connection>
+  <amqp-consuming-server>
+      connection_id   dms.connection
+      site_id         ${webservicejson:site_id}
+      user_id         admin
+  </amqp-consuming-server>
+zamqp=
+  <product-config imio.zamqp.core>
+      client_id       ${webservicejson:client_id}
+      routing_key     ${webservicejson:client_id}
+      ws_url          ${webservicejson:url}
+      ws_login        ${webservicejson:login}
+      ws_password     ${webservicejson:password}
   </product-config>
-  %define FILESTORAGE ${buildout:directory}/var/filestorage
-  %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
-  %define ZEOADDRESS ${zeoserver:zeo-address}
-  %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
-  %include ${buildout:directory}/zope_add_zeo.conf
-  ${zope-conf:amqp}
-  ${zope-conf:zamqp}
+
+[rabbitmq]
+hostname = 127.0.0.1
+port = 5672
+username = guest
+password = guest
+
+[webservicejson]
+url = http://localhost:6543
+login = testuser
+password = test
+client_id = 019999
+site_id = Plone
+
