Use logs-server variable for logs.imio.be so it is localhost by default

--- a/base.cfg
+++ b/base.cfg
@@ -102,7 +102,7 @@ environment-vars =
 
 event-log-custom =
     <syslog>
-        address logs.imio.be:5544
+        address ${port:logs-server}
         facility local3
         format %(asctime)s ${facts:hostname} zope[%(process)s]: ${port:cluster} ${:_buildout_section_name_} [%(levelname)s] %(name)s | %(message)s
         dateformat %b %d %H:%M:%S
