--- a/port.cfg
+++ b/port.cfg
@@ -31,3 +31,4 @@ python-uno = /usr/bin/python3
 zodb-cache-size = 100000
 zeo-client-cache-size = 1000MB
 public-url = http://localhost:8081/Plone
+logs-server = localhost
