--- a/base.cfg
+++ b/base.cfg
@@ -62,6 +62,7 @@ zeo-conf-additional =
 additional =
   %define ZEOADDRESS ${zeoserver:zeo-address}
   %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
+  %define FILESTORAGE ${buildout:directory}/var/filestorage
   %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
   %include ${buildout:directory}/zope_add_zeo.conf
   %include ${buildout:directory}/zope_add_async.conf
@@ -165,11 +166,7 @@ zope-conf-additional =
   <product-config five.z2monitor>
      bind 0.0.0.0:${port:instance-amqp-monitor}
   </product-config>
-  %define FILESTORAGE ${buildout:directory}/var/filestorage
-  %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
-  %define ZEOADDRESS ${zeoserver:zeo-address}
-  %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
-  %include ${buildout:directory}/zope_add_zeo.conf
+  ${zope-conf:additional}
   ${zope-conf:amqp}
   ${zope-conf:zamqp}
 
