MAke amqp packages available in tests

--- a/dev.cfg
+++ b/dev.cfg
@@ -79,7 +79,7 @@ defaults = ['--auto-color', '--auto-progress']
 #extra-paths = ${buildout:directory}/parts/omelette
 #include-site-packages = true
 eggs =
-    Products.PloneMeeting [test]
+    Products.PloneMeeting [test,amqp]
 
 environment = testenv
 
