Use sources for imio.pm.ws by default

--- a/dev.cfg
+++ b/dev.cfg
@@ -43,6 +43,7 @@ auto-checkout =
 #    communesplone.layout
     ftw.labels
     imio.pm.locales
+    imio.pm.ws
     imio.zamqp.core
     imio.zamqp.pm
     plonetheme.imioapps
