Can not rely on communes.cfg and communes-dev.cfg as we need the MeetingCharleroi zcml to be loaded before MeetingCommunes one...

--- a/charleroi-dev.cfg
+++ b/charleroi-dev.cfg
@@ -1,16 +1,18 @@
 [buildout]
 
 extends =
-    communes-dev.cfg
+    dev.cfg
     charleroi.cfg
 
 auto-checkout +=
+    Products.MeetingCommunes
     Products.MeetingCharleroi
 
 parts +=
     testcharleroi
 
 [sources]
+Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
 Products.MeetingCharleroi = git ${remotes:imio}/Products.MeetingCharleroi.git pushurl=${remotes:imio_push}/Products.MeetingCharleroi.git branch=master
 
 [testcharleroi]
