Do not rely on charleroi.cfg as it extends prod.cfg

--- a/charleroi-dev.cfg
+++ b/charleroi-dev.cfg
@@ -1,7 +1,6 @@
 [buildout]
 
 extends =
-    charleroi.cfg
     dev.cfg
 
 auto-checkout +=
@@ -10,6 +9,15 @@ auto-checkout +=
 
 parts +=
     testcharleroi
+
+[instance1]
+eggs +=
+    Products.MeetingCharleroi
+
+zcml +=
+    Products.MeetingCharleroi
+    Products.MeetingCommunes
+    imio.pm.locales
 
 [sources]
 Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
