Configured buildout to support ldap.cfg and for BEP correctly

--- a/bep-dev.cfg
+++ b/bep-dev.cfg
@@ -1,17 +1,27 @@
 [buildout]
 
 extends =
-    communes-dev.cfg
-    bep.cfg
+    dev.cfg
 
 auto-checkout +=
+    Products.MeetingCommunes
     Products.MeetingBEP
 
 parts +=
     testbep
 
+[instance1]
+eggs +=
+    Products.MeetingBEP
+
+zcml +=
+    Products.MeetingBEP
+    Products.MeetingCommunes
+    imio.pm.locales
+
 [sources]
 Products.MeetingBEP = git ${remotes:imio}/Products.MeetingBEP.git pushurl=${remotes:imio_push}/Products.MeetingBEP.git branch=master
+Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
 
 [testbep]
 recipe = zc.recipe.testrunner
