Configure MeetingPROVHainaut buildout config files

--- a/hainaut-prov-dev.cfg
+++ b/hainaut-prov-dev.cfg
@@ -1,16 +1,26 @@
 [buildout]
 
 extends =
-    communes-dev.cfg
-    hainaut-prov.cfg
+    dev.cfg
 
 auto-checkout +=
+    Products.MeetingCommunes
     Products.MeetingPROVHainaut
 
 parts +=
     testhainaut
 
+[instance1]
+eggs +=
+    Products.MeetingPROVHainaut
+
+zcml +=
+    Products.MeetingPROVHainaut
+    Products.MeetingCommunes
+    imio.pm.locales
+
 [sources]
+Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
 Products.MeetingPROVHainaut = git ${remotes:imio}/Products.MeetingPROVHainaut.git pushurl=${remotes:imio_push}/Products.MeetingPROVHainaut.git branch=master
 
 [testhainaut]
