--- a/hainaut-prov.cfg
+++ b/hainaut-prov.cfg
@@ -1,7 +1,7 @@
 [buildout]
 
-extends +=
-    communes.cfg
+extends =
+    prod.cfg
 
 [instance1]
 eggs +=
@@ -10,6 +10,7 @@ eggs +=
 zcml +=
     Products.MeetingPROVHainaut
     Products.MeetingCommunes
+    imio.pm.locales
 
 [versions]
 Products.MeetingPROVHainaut = 4.1
