--- a/jenkins.cfg
+++ b/jenkins.cfg
@@ -1,8 +1,8 @@
 [buildout]
 extends =
-    dev.cfg
-    base.cfg
+    communes-dev.cfg
     https://raw.githubusercontent.com/IMIO/buildout.jenkins/master/jenkins.cfg
+    versions-jenkins.cfg
 
 source-directory = ${buildout:directory}/src
 
@@ -13,14 +13,3 @@ flake8-max-line-length = 119
 [zopepy]
 eggs = ${instance1:eggs}
 
-[versions]
-plone.recipe.codeanalysis = 1.0rc1
-flake8 = 2.1.0
-mccabe = 0.2.1
-pep8 = 1.5.6
-pyflakes = 0.8.1
-gp.recipe.node = 0.10.26.0
-python-archive = 0.2
-hexagonit.recipe.cmmi = 2.0
-hexagonit.recipe.download = 1.7
-z3c.recipe.scripts = 1.0.1
