Include ${zope-conf:zamqp} in every instance or collective.zamqp breaks when starting the instance

--- a/base.cfg
+++ b/base.cfg
@@ -59,7 +59,7 @@ additional =
   %include ${buildout:directory}/zope_add_zeo.conf
   %include ${buildout:directory}/zope_add_async.conf
 amqp =
-zamqp=
+zamqp =
 
 [instance1]
 #effective-user =
@@ -148,6 +148,7 @@ zope-conf-additional =
      bind 0.0.0.0:${port:instance-async-monitor}
   </product-config>
   ${zope-conf:additional}
+  ${zope-conf:zamqp}
 
 [instance-amqp]
 <= instance1
