--- a/prod.cfg
+++ b/prod.cfg
@@ -19,6 +19,7 @@ zope-conf-additional =
      bind 0.0.0.0:${port:instance2-monitor}
   </product-config>
   ${zope-conf:additional}
+  ${zope-conf:zamqp}
 
 [instance3]
 <= instance1
@@ -28,6 +29,7 @@ zope-conf-additional =
      bind 0.0.0.0:${port:instance3-monitor}
   </product-config>
   ${zope-conf:additional}
+  ${zope-conf:zamqp}
 
 [instance4]
 <= instance1
@@ -37,6 +39,7 @@ zope-conf-additional =
      bind 0.0.0.0:${port:instance4-monitor}
   </product-config>
   ${zope-conf:additional}
+  ${zope-conf:zamqp}
 
 [instance-debug]
 <= instance1
@@ -48,6 +51,7 @@ zope-conf-additional =
      bind 0.0.0.0:${port:instance-debug-monitor}
   </product-config>
   ${zope-conf:additional}
+  ${zope-conf:zamqp}
 eggs =
     ${instance1:eggs}
     ${debug:eggs}
