--- a/communes-dev.cfg
+++ b/communes-dev.cfg
@@ -17,8 +17,9 @@ zcml +=
     Products.MeetingCommunes
 
 [sources]
-Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
-Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=master
+Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=docker
+Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=docker
+collective.documentgenerator = git git://github.com/collective/collective.documentgenerator.git git://github.com/collective/collective.documentgenerator.git branch=libreoffice-docker
 
 [testmc]
 recipe = zc.recipe.testrunner
