--- a/versions-dev.cfg
+++ b/versions-dev.cfg
@@ -33,3 +33,7 @@ selenium = 3.3.0
 
 
 collective.profiler = 0.3
+
+dexterity.localrolesfield = 1.2
+dexterity.localroles = 1.3
+ecreall.helpers.testing = 1.7
