Prepre next release

--- a/bep.cfg
+++ b/bep.cfg
@@ -12,4 +12,5 @@ zcml +=
     Products.MeetingCommunes
 
 [versions]
-Products.MeetingBEP = 4.1
+Products.MeetingCommunes = 4.1rc1
+Products.MeetingBEP = 4.1rc1
