--- a/versions.cfg
+++ b/versions.cfg
@@ -4,7 +4,7 @@ setuptools = 38.2.4
 Products.DocFinderTab = 1.0.5
 mr.developer = 1.38
 
-Products.PloneMeeting = 4.1b17
+Products.PloneMeeting = 4.1rc1
 
 # Required by:
 # Products.PloneMeeting
@@ -41,7 +41,7 @@ imio.dashboard = 2.6
 imio.helpers = 0.18
 imio.migrator = 1.11
 imio.history = 1.18
-imio.pm.locales = 4.1b13
+imio.pm.locales = 4.1rc1
 imio.prettylink = 1.14
 imio.pyutils = 0.11
 plone.app.versioningbehavior = 1.3.1
