--- a/charleroi.cfg
+++ b/charleroi.cfg
@@ -13,4 +13,5 @@ zcml +=
     imio.pm.locales
 
 [versions]
-Products.MeetingCharleroi = 4.1
+Products.MeetingCommunes = 4.1rc1
+Products.MeetingCharleroi = 4.1rc1
