--- a/versions.cfg
+++ b/versions.cfg
@@ -33,6 +33,8 @@ collective.usernamelogger = 1.4
 collective.z3cform.datagridfield = 1.3.3
 collective.z3cform.select2 = 2.0.1
 communesplone.layout = 4.3.8.1
+dexterity.localrolesfield = 1.2
+dexterity.localroles = 1.3
 ecreall.helpers.upgrade = 1.4
 ftw.labels = 1.3.1
 imio.annex = 2.4
