Do not rely on liege.cfg for liege-dev.cfg to avoid relying on prod.cfg

--- a/liege-dev.cfg
+++ b/liege-dev.cfg
@@ -2,13 +2,19 @@
 
 extends =
     dev.cfg
-    liege.cfg
 
 auto-checkout +=
     Products.MeetingLiege
 
 parts +=
     testliege
+
+[instance1]
+eggs +=
+    Products.MeetingLiege
+
+zcml +=
+    Products.MeetingLiege
 
 [sources]
 Products.MeetingLiege = git ${remotes:imio}/Products.MeetingLiege.git pushurl=${remotes:imio_push}/Products.MeetingLiege.git branch=master
@@ -17,5 +23,5 @@ Products.MeetingLiege = git ${remotes:imio}/Products.MeetingLiege.git pushurl=${
 recipe = zc.recipe.testrunner
 defaults = ['--auto-color', '--auto-progress', '-s', 'Products.MeetingLiege']
 eggs =
-    Products.MeetingLiege [test]
+    Products.MeetingLiege[test]
 environment = testenv
