--- a/base.cfg
+++ b/base.cfg
@@ -3,7 +3,7 @@ index = http://devpi.imio.be/root/imio/+simple/
 
 extensions =
     mr.developer
-allow-picked-versions = false
+allow-picked-versions = true
 
 parts =
     omelette
