--- a/versions-dev.cfg
+++ b/versions-dev.cfg
@@ -37,3 +37,8 @@ collective.profiler = 0.3
 dexterity.localrolesfield = 1.2
 dexterity.localroles = 1.3
 ecreall.helpers.testing = 1.7
+Pillow =
+pillow =
+python_magic =
+python-magic =
+magic =
