Use script = instance-solr

--- a/solr.cfg
+++ b/solr.cfg
@@ -28,6 +28,7 @@ solr-max-ram = 256M
 
 [solr-instance]
 recipe = collective.recipe.solrinstance
+script = instance-solr
 solr-location = ${solr-download:location}
 host = ${settings:solr-host}
 port = ${settings:solr-port}
