Use Products.MeetingCommunes = 4.1rc3, Products.MeetingPROVHainaut = 4.1rc1

--- a/hainaut-prov.cfg
+++ b/hainaut-prov.cfg
@@ -13,4 +13,5 @@ zcml +=
     imio.pm.locales
 
 [versions]
-Products.MeetingPROVHainaut = 4.1
+Products.MeetingCommunes = 4.1rc3
+Products.MeetingPROVHainaut = 4.1rc1
