adapt config file for profile who using MeetingConfig

--- a/lalouviere-cpas.cfg
+++ b/lalouviere-cpas.cfg
@@ -1,21 +1,17 @@
 [buildout]
 
 extends =
-    communes-dev.cfg
-    bep.cfg
+    prod.cfg
 
-auto-checkout +=
+[instance1]
+eggs +=
     Products.MeetingCPASLalouviere
 
-parts +=
-    testbep
+zcml +=
+    Products.MeetingCPASLalouviere
+    Products.MeetingCommunes
+    imio.pm.locales
 
-[sources]
-Products.MeetingCPASLalouviere = git ${remotes:imio}/Products.MeetingCPASLalouviere.git pushurl=${remotes:imio_push}/Products.MeetingCPASLalouviere.git branch=master
-
-[testbep]
-recipe = zc.recipe.testrunner
-defaults = ['--auto-color', '--auto-progress', '-s', 'Products.MeetingCPASLalouviere']
-eggs =
-    Products.MeetingCPASLalouviere [test]
-environment = testenv
+[versions]
+Products.MeetingCommunes = 4.0
+Products.MeetingCPASLalouviere = 4.0.2
