--- a/seraing-dev.cfg
+++ b/seraing-dev.cfg
@@ -1,16 +1,26 @@
 [buildout]
 
 extends =
-    communes-dev.cfg
-    seraing.cfg
+    dev.cfg
 
 auto-checkout +=
+    Products.MeetingCommunes
     Products.MeetingSeraing
 
 parts +=
     testseraing
 
+[instance1]
+eggs +=
+    Products.MeetingSeraing
+
+zcml +=
+    Products.MeetingSeraing
+    Products.MeetingCommunes
+    imio.pm.locales
+
 [sources]
+Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
 Products.MeetingSeraing = git ${remotes:imio}/Products.MeetingSeraing.git pushurl=${remotes:imio_push}/Products.MeetingSeraing.git branch=master
 
 [testseraing]
