--- a/lalouviere-cpas-dev.cfg
+++ b/lalouviere-cpas-dev.cfg
@@ -1,16 +1,26 @@
 [buildout]
 
 extends =
-    communes-dev.cfg
-    lalouviere-cpas.cfg
+    dev.cfg
 
 auto-checkout +=
+    Products.MeetingCommunes
     Products.MeetingCPASLalouviere
 
 parts +=
     testlalouvierecpas
 
+[instance1]
+eggs +=
+    Products.MeetingCPASLalouviere
+
+zcml +=
+    Products.MeetingCPASLalouviere
+    Products.MeetingCommunes
+    imio.pm.locales
+
 [sources]
+Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
 Products.MeetingCPASLalouviere = git ${remotes:imio}/Products.MeetingCPASLalouviere.git pushurl=${remotes:imio_push}/Products.MeetingCPASLalouviere.git branch=master
 
 [testlalouvierecpas]
