--- a/namur-dev.cfg
+++ b/namur-dev.cfg
@@ -1,16 +1,26 @@
 [buildout]
 
 extends =
-    communes-dev.cfg
-    namur.cfg
+    dev.cfg
 
 auto-checkout +=
+    Products.MeetingCommunes
     Products.MeetingNamur
 
 parts +=
     testnamur
 
+[instance1]
+eggs +=
+    Products.MeetingNamur
+
+zcml +=
+    Products.MeetingNamur
+    Products.MeetingCommunes
+    imio.pm.locales
+
 [sources]
+Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=4.0
 Products.MeetingNamur = git ${remotes:imio}/Products.MeetingNamur.git pushurl=${remotes:imio_push}/Products.MeetingNamur.git branch=master
 
 [testnamur]
