--- a/namur.cfg
+++ b/namur.cfg
@@ -1,7 +1,7 @@
 [buildout]
 
-extends +=
-    communes.cfg
+extends =
+    prod.cfg
 
 [instance1]
 eggs +=
@@ -10,6 +10,8 @@ eggs +=
 zcml +=
     Products.MeetingNamur
     Products.MeetingCommunes
+    imio.pm.locales
 
 [versions]
-Products.MeetingNamur = 4.1
+Products.MeetingCommunes = 4.0
+Products.MeetingNamur = 4.01
