--- a/seraing.cfg
+++ b/seraing.cfg
@@ -1,7 +1,7 @@
 [buildout]
 
 extends +=
-    communes.cfg
+    prod.cfg
 
 [instance1]
 eggs +=
@@ -10,6 +10,8 @@ eggs +=
 zcml +=
     Products.MeetingSeraing
     Products.MeetingCommunes
+    imio.pm.locales
 
 [versions]
-Products.MeetingSeraing = 4.1
+Products.MeetingCommunes = 4.0
+Products.MeetingSeraing = 4.0.2
