--- a/bep.cfg
+++ b/bep.cfg
@@ -12,5 +12,5 @@ zcml +=
     Products.MeetingCommunes
 
 [versions]
-Products.MeetingCommunes = 4.1rc6
-Products.MeetingBEP = 4.1rc3
+Products.MeetingCommunes = 4.1rc7
+Products.MeetingBEP = 4.1b3
