--- a/hainaut-prov-dev.cfg
+++ b/hainaut-prov-dev.cfg
@@ -20,8 +20,10 @@ zcml +=
     imio.pm.locales
 
 [sources]
-Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
-Products.MeetingPROVHainaut = git ${remotes:imio}/Products.MeetingPROVHainaut.git pushurl=${remotes:imio_push}/Products.MeetingPROVHainaut.git branch=master
+Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=MPMPHAI-21_custom_validation_levels_for_item
+imio.pm.locales = git ${remotes:imio}/imio.pm.locales.git pushurl=${remotes:imio_push}/imio.pm.locales.git branch=MPMPHAI-21_custom_validation_levels_for_item
+Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=MPMPHAI-21_custom_validation_levels_for_item
+Products.MeetingPROVHainaut = git ${remotes:imio}/Products.MeetingPROVHainaut.git pushurl=${remotes:imio_push}/Products.MeetingPROVHainaut.git branch=MPMPHAI-21_custom_validation_levels_for_item
 
 [testhainaut]
 recipe = zc.recipe.testrunner
