--- a/versions.cfg
+++ b/versions.cfg
@@ -2,13 +2,13 @@
 zc.buildout = 2.13.1
 setuptools = 38.2.4
 Products.DocFinderTab = 1.0.5
-mr.developer = 1.38
+mr.developer = 2.0.0
 
-Products.PloneMeeting = 4.1rc9
+Products.PloneMeeting = 4.1
 
 # Required by:
 # Products.PloneMeeting
-appy = 0.9.14
+appy = 0.9.15
 beautifulsoup4 = 4.5.3
 natsort = 5.5.0
 collective.behavior.talcondition = 0.11
@@ -40,7 +40,7 @@ ftw.labels = 1.3.1
 imio.annex = 2.4
 imio.actionspanel = 1.42
 imio.dashboard = 2.6
-imio.helpers = 0.21
+imio.helpers = 0.22
 imio.migrator = 1.14
 imio.history = 1.18
 imio.pm.locales = 4.1rc4
@@ -49,7 +49,7 @@ imio.pyutils = 0.11
 plone.app.versioningbehavior = 1.3.1
 plone.formwidget.masterselect = 1.6
 plonetheme.imioapps = 2.10
-Products.CPUtils = 1.15
+Products.CPUtils = 1.16
 Products.PasswordStrength = 0.4
 python-dateutil = 2.7.3
 simplejson = 3.13.2
